# indl-video-dataset

./: .gitignore  README-zh.md  README.md  main.py  pyproject.toml
data/: data_crossing.py  data_generate.py  generator.py  planner.py
