[project]
name = "indl-video-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imageio[ffmpeg,pyav]>=2.35.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pyllusion>=1.3",
    "tqdm>=4.66.5",
]
